# 3lc-plugin-sdk

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.md  conf.py  package-lock.json  package.json  plugin-guide.md  requirements.txt
src/tlc_plugin_sdk/: __init__.py  asgi_app.py  contract.py  job_context.py  worker.py
src/tlc_plugin_sdk/contract/: plugin-api.d.ts
src/tlc_plugin_sdk/shared/: __init__.py  alias_override_ui.py  alias_ui.py  aliases.py  config_store.py  config_ui.py  generic_job.py  images.py  job_tracker.py  labels.py  modality.py  model_storage.py  naming.py  ui_inject.py  url_utils.py
tests/: test_import_light.py
